--- a/source/style/blocks/login-form.scss
+++ b/source/style/blocks/login-form.scss
@@ -9,6 +9,7 @@
     text-align: center;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    position: fixed;
     z-index: 999;
 }
 
