--- a/source/template/main-layout.pug
+++ b/source/template/main-layout.pug
@@ -2,20 +2,21 @@ include mixins/mixins
 
 doctype html
 html(lang="en")
+    //- block vars
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        link(rel="stylesheet", href="assets/css/foundation.css")
+        //- link(rel="stylesheet", href="assets/css/foundation.css")
         link(rel="stylesheet", href="assets/css/normalize.css")
         link(rel="stylesheet", href="assets/css/app.css")
-        title About
+        title ITlink - #{title}
     body
         .wrapper
             header.header
                 .container
                     .header__logo
-                        a(href="#").logo.header__logo-link
+                        a(href="main.html").logo.header__logo-link
                             img(src="assets/img/logo.png" alt="").logo__img.header__logo-img
                     .header__search
                         .search
@@ -23,9 +24,10 @@ html(lang="en")
                                 input(type="text" name="" id="" placeholder="Search").search__input
                                 input(type="submit" value="").search__submit
                     ul.header__menu.menu
-                        each item in ['Main', 'Skills', 'Education', 'Profile', 'Login']
+                        each item in ['Main', 'Skills', 'Courses', 'About', 'Login']
                             li.header__menu-item.menu__item
-                                a(href="#" class=`header__menu-link header__menu-link_${item} menu__link`)
+                                - var link = (item == 'Login') ? 'index.html' : `${item}.html`
+                                a(href=link class=`header__menu-link header__menu-link_${item} menu__link`)
                                     .header__menu-text.menu__text= item
             
             block content
@@ -48,5 +50,6 @@ html(lang="en")
                 .footer__second-row
                     .footer__text Skills management system, created on EPAM Front-End courses
                     .footer__copyright © Lena Aviles | Made with Love | 2017
-
-        script(src="assets/js/app.js")    
+        
+        script(src="assets/js/foundation.js")
+        script(src="assets/js/app.js")   
