--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -1,4 +1,8 @@
 extends ../main-layout.pug
+
+//- block vars
+//-      - var title = 'About'
+
 block content
     .container
         section.section.hero
