--- a/source/template/pages/courses.pug
+++ b/source/template/pages/courses.pug
@@ -1,4 +1,8 @@
 extends ../main-layout.pug
+
+//- block vars
+//- 	- var title = 'Courses'
+
 block content
 	.container
 		section.section.breadcrumbs        
