--- a/source/template/pages/skills.pug
+++ b/source/template/pages/skills.pug
@@ -1,4 +1,8 @@
 extends ../main-layout.pug
+
+//- block vars
+//-      - var title = 'Skills'
+
 block content
     .container
         section.section.breadcrumbs        
