--- a/source/style/blocks/button.scss
+++ b/source/style/blocks/button.scss
@@ -3,11 +3,11 @@
     padding: 10px 20px;
     border: none;    
     outline: none;
-    color: #fff;    
+    color: #fff; 
+    transition: all .4s;   
 }
 
-.save-button {
-    border-radius: 5px;
+.save-button {    
     background: $skills-green;
     margin: 20px 0;
 
