--- a/views/main-layout.pug
+++ b/views/main-layout.pug
@@ -16,7 +16,7 @@ html(lang="en")
             header.header
                 .container
                     .header__logo
-                        a(href="main.html").logo.header__logo-link
+                        a(href="main").logo.header__logo-link
                             img(src="assets/img/logo.png" alt="").logo__img.header__logo-img
                     .header__search
                         .search
@@ -50,5 +50,6 @@ html(lang="en")
                     .footer__text Skills management system, created on EPAM Front-End courses
                     .footer__copyright © Lena Aviles | Made with Love | 2017
         
-        script(src="assets/js/foundation.js")
-        script(src="assets/js/app.js")   
+        script(src=`assets/js/foundation${suffix}.js${version}`)
+        script(src=`assets/js/app${suffix}.js${version}`) 
+        block scripts  
