--- a/source/style/blocks/form.scss
+++ b/source/style/blocks/form.scss
@@ -1,15 +1,25 @@
 .form-container {
     padding: 10px;
-    width: 320px;
-    text-align: center;
+    width: 380px;
+    height: 780px;
+    text-align: center;    
+}
+
+.form__input {    
+    outline: 0;
+    border: none;    
+    border-radius: 5px;
+    padding: 15px;
 }
 
 .form__input-line {
     position: relative;
-    width: 300px;
+    width: 100%;
 }
 
 .form__input-file-img {
+    @include centered(x);
+    position: relative;
     width: 300px;
     height: 300px;
     background: url("http://placehold.it/300");
