--- a/views/pages/courses.pug
+++ b/views/pages/courses.pug
@@ -33,14 +33,30 @@ block content
 						.form__subtitle.subtitle Add new course
 						.status
 						.form__input-line
-							textarea(placeholder="Describe the course").dialog__text.topnews__content.form__input#course-desc
+							textarea(name="text" placeholder="Describe the course").dialog__text.topnews__content.form__input#course-desc
 						.form__input-line
 							.form__input-file-img#img-holder
 							label(tabindex="0" for="file-select").button.save-button.form__input-file-trigger Upload picture							
 							input(name="photo" type="file" required accept="image/*").form__input.form__input-file#file-select
-							<p class="file-return"></p>
+						
+						.form__input-line
+							label(for="date-start") Course starts:
+							br
+							label.login-form__label
+								svg.login-form__icon
+										use(xlink:href=`assets/img/sprite.svg#calendar`)
+							input(id="date-start" type="date" name="start" class="login-form__input login-form__username" placeholder="" required)
+
+						.form__input-line
+							label(for="date-end") Course ends:
+							br
+							label.login-form__label
+								svg.login-form__icon
+										use(xlink:href=`assets/img/sprite.svg#calendar`)
+							input(id="date-end" type="date" name="end" class="login-form__input login-form__username" placeholder="" required)
+						
 						.form__btns.form__input-line
-							input(name="" type="submit" value="Add course").button.save-button.form__btn-send
+							input(name="" type="submit" value="Add course").button.save-button.form__btn-send#add-btn
 							input(name="" type="reset" value="Cancel").button.save-button.form__btn-reset
 
 			section.pagination
