login, flip login form, refactoring

--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -4,6 +4,7 @@ $main-font-color: #373e42;
 $skills-grey: #dfdcd5;
 $skills-green: #10c1a8;
 $socials-color: #fff;
+$trans-white: rgba(#fff, .5);
 $footer-color: rgba(#3c4044, .85);
 $menu-color: #283e4a;
 
