--- a/source/style/blocks/about.scss
+++ b/source/style/blocks/about.scss
@@ -25,3 +25,9 @@
     position: absolute;
     bottom: 100%;
 }
+
+.about__subtitle {
+    padding: 45px 80px; 
+    @include centered(x);
+	position: relative;
+}
