--- a/views/main-layout.pug
+++ b/views/main-layout.pug
@@ -47,7 +47,7 @@ html(lang="en")
                                         use(xlink:href=`assets/img/sprite.svg#${item}`)    
                 //- hr
                 .footer__second-row
-                    .footer__text Skills management system, created on EPAM Front-End courses
+                    .footer__text Skills management system
                     .footer__copyright © Lena Aviles | Made with Love | 2017
         
         script(src=`assets/js/foundation${suffix}.js${version}`)
