--- a/views/pages/login.pug
+++ b/views/pages/login.pug
@@ -14,42 +14,74 @@ html(lang="en")
         .wrapper
             .login__bg
                     img(src="assets/img/bg/portfolio.jpg", alt="").login__bg-img
-                        
-            form(id='login-form').login-form
-                .login-form__title.subtitle Log in
-                .login-form__login
-                    label.login-form__label
-                        svg.login-form__icon
-                                use(xlink:href=`assets/img/sprite.svg#login`)
-                    input(id="login__username" type="text" name="username" class="login-form__input login-form__username" placeholder="Username" required)
-                .login-form__password
-                    label.login-form__label
-                        svg.login-form__icon
-                                use(xlink:href=`assets/img/sprite.svg#password`)
-                    input(id="login__password" type="text" name="password" class="login-form__input login-form__password" placeholder="Password" required)
-                
-                .login-form__captcha
-                    .login-form__checkbox
-                        label.checkbox I am a human
-                            input.checkbox__input(type="checkbox" checked="checked")
-                            span.checkbox__checkmark
-                    .login-form__question Are you sure?
-                    .login-form__radio
-                        label.radio Yes
-                            input.radio__input(type="radio" name="radio")
-                            span.radio__checkmark
-                        label.radio I'm not sure
-                            input.radio__input(type="radio" name="radio")
-                            span.radio__checkmark
 
-                
-                button.button(id='main-button').login-form__button_left Main
-                
-                input.button(type="submit" id='login-button' value='Log in').login-form__button_right 
+            button.button(id='registration').button.registration-button Registration
+
+            .flip-container(ontouchstart="this.classList.toggle('hover');")#flip
+                .flipper
+                    .front            
+                        form(id='login-form').form.login-form(action='login' method="POST")
+                            .form__title.subtitle.subtitle_dashed Log in
+                            .status
+                            .form__input-line
+                                label.input__label
+                                    svg.form__icon
+                                            use(xlink:href=`assets/img/sprite.svg#login`)
+                                input(id="login" type="text" name="login" class="form__input login-form__login" placeholder="Login" required)
+                            .form__input-line
+                                label.input__label
+                                    svg.form__icon
+                                            use(xlink:href=`assets/img/sprite.svg#password`)
+                                input(id="password" type="text" name="password" class="form__input login-form__password" placeholder="Password" required)
+                            
+                            .login-form__captcha
+                                .login-form__checkbox
+                                    label.checkbox I am a human
+                                        input.checkbox__input(type="checkbox" checked="checked")
+                                        span.checkbox__checkmark
+                                .login-form__question Are you sure?
+                                .login-form__radio
+                                    label.radio Yes
+                                        input.radio__input(type="radio" name="radio")
+                                        span.radio__checkmark
+                                    label.radio I'm not sure
+                                        input.radio__input(type="radio" name="radio")
+                                        span.radio__checkmark
+
+                            .login-form__buttons.form__btn-group
+                                button.button(id='main-button').form__button_left Main                
+                                input.button(type="submit" id='login-button' value='Log in').form__button_right 
+
+                    
+                    .back
+                        form(id='login-form').form.registration-form(action='login' method="POST")
+                            .form__title.subtitle.subtitle_dashed Registration
+                            .status
+                            .form__input-line
+                                label.input__label
+                                    svg.form__icon
+                                            use(xlink:href=`assets/img/sprite.svg#login`)
+                                input(id="login" type="text" name="login" class="form__input login-form__login" placeholder="Login" required)
+                            .form__input-line
+                                label.input__label
+                                    svg.form__icon
+                                            use(xlink:href=`assets/img/sprite.svg#password`)
+                                input(id="password" type="text" name="password" class="form__input login-form__password" placeholder="Password" required)
+                            
+                            .form__input-line
+                                label.input__label
+                                    svg.form__icon
+                                            use(xlink:href=`assets/img/sprite.svg#email`)
+                                input(id="email" type="email" name="email" class="form__input login-form__email" placeholder="Email" required)
+
+                            .login-form__buttons.form__btn-group
+                                button.button(id='main-button').form__button_left Main                    
+                                input.button(type="submit" id='login-button' value='Registration').form__button_right 
             
         footer.login-footer                
-                .login-footer__text Skills management system, created on EPAM Front-End courses | © Lena Aviles | Made with Love | 2017
-                //- .login-footer__copyright © Lena Aviles | Made with Love | 2017
-
+                .login-footer__text Skills management system | © Lena Aviles | Made with Love | 2017
+                
         script(src="assets/js/foundation.js")
         script(src="assets/js/app.js")
+        block scripts
+            script(src="assets/js/login.js")
