--- a/source/style/blocks/socials.scss
+++ b/source/style/blocks/socials.scss
@@ -19,7 +19,7 @@
     display: inline-block;
     width: 1.6rem;
     height: 1.4rem;        
-    fill: rgba($socials-color, .5);        
+    fill: $trans-white;        
 
     &:hover {
         fill: $socials-color;
