--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -49,7 +49,7 @@ block content
                 .user-about
                     .user-about__picture
                         img(src="assets/img/content/user.jpg", alt="").user-about__photo-img
-                    .user-about__title.subtitle.subtitle_about
+                    .user-about__title.subtitle.subtitle_dashed.about__subtitle
                         | Who am I
                     .user-about__text
                         p.user-about__text_paragraph Hello! I'm an enthusiastic front-end developer with excellent knowledge of HTML and CSS - cross-browser and responsive markup with semantic, clear and easily readable code.
@@ -59,23 +59,23 @@ block content
             .about__right
                 .about-data__description
                     .about-data__title
-                        .subtitle.subtitle_about What can I do
+                        .subtitle.subtitle_dashed.about__subtitle What can I do
                     .about-data__text
                         p.about-data__text_paragraph I'm a quick-learner and really hungry for knowledge, I am purposeful and persistent. I also have excellent communication skills, I'm friendly and ready to work in a team for best result. Difficult tasks never frighten me.
                         p.about-data__text_paragraph I just love to code - and I do it with a passion for clean, well commented and standard compliant code.
                 .about-data__content
-                ul.skills
-                    each skillGroup in skills
-                        each skillsArray, skillGroupName in skillGroup
-                            li.skills__item
-                                .skill-section
-                                    .skill-section__title= skillGroupName
-                                    ul.skill-section__list.skill-section__list_about  
-                                        each skill in skillsArray
-                                            each skillRate, skillTitle in skill
-                                                li.skills-section__item
-                                                    .skill
-                                                        +skill__circle(skillRate)                                                    
-                                                        .skill__name= skillTitle                
+                //- ul.skills
+                //-     each skillGroup in skills
+                //-         each skillsArray, skillGroupName in skillGroup
+                //-             li.skills__item
+                //-                 .skill-section
+                //-                     .skill-section__title= skillGroupName
+                //-                     ul.skill-section__list.skill-section__list_about  
+                //-                         each skill in skillsArray
+                //-                             each skillRate, skillTitle in skill
+                //-                                 li.skills-section__item
+                //-                                     .skill
+                //-                                         +skill__circle(skillRate)                                                    
+                //-                                         .skill__name= skillTitle                
         section.section.map
         .empty
