--- a/source/style/app.scss
+++ b/source/style/app.scss
@@ -7,6 +7,7 @@ $socials-color: #fff;
 $trans-white: rgba(#fff, .5);
 $footer-color: rgba(#3c4044, .85);
 $menu-color: #283e4a;
+$form-color: rgba(#fff, .85);
 
 //mixins
 @import 'helpers/mixins.scss';
