--- a/source/style/blocks/add-course-form.scss
+++ b/source/style/blocks/add-course-form.scss
@@ -1,10 +1,11 @@
 .add-course-form {
 	padding: 10px;
-	height: 650px;
+	height: 520px;
+	z-index: 1;
 }
 
 .add-course-form__buttons {	
-	top: 650px;
+	top: 520px;
 	background: rgba($skills-green, .5);
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
